<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/my_layout">

    <TextView android:text="@string/my_title" android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:id="@+id/my_title"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/media_streamer"
        android:id="@+id/button"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/my_title"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:background="@drawable/button_custom"
        android:onClick="mediaStreamer" />

    <Button
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/super_duo1"
        android:id="@+id/button2"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_custom"
        android:onClick="scoresApp" />

    <Button
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/super_duo2"
        android:id="@+id/button3"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_custom"
        android:onClick="libraryApp" />

    <Button
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/ant_terminator"
        android:id="@+id/button4"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:background="@drawable/button_custom"
        android:onClick="buildItBigger" />

    <Button
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/materialize"
        android:id="@+id/button5"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_custom"
        android:onClick="baconReader" />

    <Button
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:background="@drawable/capstone_custom"
        android:onClick="capstone" />

</RelativeLayout>
